fixed the z-index of the follow button

--- a/css/style.css
+++ b/css/style.css
@@ -17,9 +17,9 @@ section#home {
 }
 
 .offset-section:before {
-  display: block;
-  height: 4rem;
   content: "";
+  display: block;
+  height: 2.6rem;
   margin-top: -4rem;
 }
 
@@ -30,6 +30,7 @@ section#home {
   letter-spacing: .1rem;
   background-color: rgba(0, 0, 0, .6) !important;
   background-color: rgba(0, 0, 0, .79) !important;
+ 
 }
 
 .navbar-dark .navbar-brand{
@@ -41,12 +42,12 @@ section#home {
 }
 
 .navbar-dark .navbar-brand:hover{
-  
-  
-  color:var(--rose-red);
+
+    color:var(--rose-red);
     transform: translateX(10px);
 
 }
+
 .navbar-nav li {
   padding-right: .7rem;
 }
@@ -62,16 +63,11 @@ section#home {
 }
 
 /******banner ****************/
-/* .caption{
-  width: 100%;
-  max-width: 100%;
-  top: 38%;
-  z-index: 1;
 
-} */
 .banner {
   position: relative;
   width: 100%;
+  background: rgba(0, 0, 0, .7) !important;
 }
 
 .banner-img {
@@ -117,7 +113,7 @@ section#about {
 .about-content::after {
   content: "";
   right: -2px;
-  bottom: -140px;
+  bottom: -180px;
   height: 145px;
   width: 180px;
   background-image: url("../img/rose-pink-2\ \(1\).jpg");
@@ -128,8 +124,8 @@ section#about {
 
 .about-content::before {
   content: "";
-  left: -2px;
-  top: -140px;
+  left: -10px;
+  top: -180px;
   height: 145px;
   width: 180px;
   background-image: url("../img/rose-pink-2\ \(2\).jpg");
@@ -138,6 +134,22 @@ section#about {
   position: absolute;
 }
 
+.about-self{
+  max-width: 500px;
+  margin-top: 80px;
+  padding: 60px;
+  background: rgba(0, 0, 0, .7);
+  margin-bottom: 20px;
+  color: #fff;
+  display: block;
+  margin: 0 auto;
+}
+
+.about-self p{
+  line-height: 2rem;
+  text-align: left;
+  letter-spacing: .05rem;
+}
 
 
 .section-title {
@@ -193,7 +205,6 @@ section#sassy {
   margin-top: 24px;
   margin-bottom: 24px;
   margin: 180px 0 120px;
-  z-index: -2;
   position: relative;
 }
 
@@ -220,6 +231,8 @@ section#sassy .section-title::after{
   padding: 60px;
   background: #ffffff8c;
   margin-bottom: 20px;
+
+
 }
 
 .sassy-self a {
@@ -232,12 +245,13 @@ section#sassy .section-title::after{
   text-align: center;
   transition: .5s;
   transform: translateX(0);
+  cursor: pointer;
 }
 
 .sassy-self a:hover{
-  background:var(--turquoise);
-  color: #000;
-  transform: translateX(-10px);
+  background:var(--rose-red);
+  color:#fff;
+  transform: translateX(-15px);
 }
 
 
@@ -305,11 +319,28 @@ section#bff {
 
 }
 
+.dark h1{
+  color: #000;
+}
+
+.dark {
+  background-color: rgba(0, 0, 0, .7);
+  color: white;
+  padding: 7rem 2rem;
+}
+
+
+.fixed {
+  background-image: url("../img/bff.jpg");
+  z-index: -2;
+}
+
 
 .jumbotron {
+  /* background-size: cover;
+  background-position: center top; */
   border-radius: 0;
   position: relative;
-  z-index: -2;
 }
 
 .bff-img img {
@@ -318,9 +349,14 @@ section#bff {
 }
 
 .bff-quote{
+  color: #fff;
   margin-top:19vh;
+  line-height: 1.79rem;
+  letter-spacing: .02rem;
+  text-shadow: .1rem .1rem .5rem black;
  
 }
+
 blockquote svg.svg-inline--fa {
   margin: 1rem;
   color: #05E0E9;
@@ -440,8 +476,23 @@ section#footer .footer-copyright>p {
 
 
 
+
 /*============ Media queries:*/
 @media (max-width: 767px) {
+
+  .offset-section:before {
+    height: 5rem;
+    margin-top: -4rem;
+  }
+
+  .about-self{
+   padding: 25px;
+  }
+
+  .sassy-self {
+    padding: 30px;
+
+  }
 
   .bff-img img {
     max-width: 100%;
@@ -454,6 +505,10 @@ section#footer .footer-copyright>p {
     margin-top:10vh;
    
   }
+  
+}
+
+
 
 
   @media (max-width: 900px) {
